--- a/test-output/old/Suite2/methods-alphabetical.html
+++ b/test-output/old/Suite2/methods-alphabetical.html
@@ -1,49 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite2</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<<<<<<< HEAD
-<tr bgcolor="cbb882">  <td>19/05/15 13:23:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.createApptSameTime()[pri:5, instance:clo.LoginPage@64bf3bbf]">createApptSameTime</td> 
+<tr bgcolor="cbb882">  <td>19/07/01 10:36:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.checksReadyToPrint()[pri:11, instance:clo.LoginPage@64bf3bbf]">checksReadyToPrint</td> 
   <td>main@1241276575</td>   <td></td> </tr>
-<tr bgcolor="cbb882">  <td>19/05/15 13:23:02</td>   <td>-19693</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.createNewAppointment()[pri:4, instance:clo.LoginPage@64bf3bbf]">createNewAppointment</td> 
+<tr bgcolor="cbb882">  <td>19/07/01 10:36:16</td>   <td>5339</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.checksRegister()[pri:12, instance:clo.LoginPage@64bf3bbf]">checksRegister</td> 
   <td>main@1241276575</td>   <td></td> </tr>
-<tr bgcolor="cbb882">  <td>19/05/15 13:23:37</td>   <td>15214</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.deleteAppointment()[pri:7, instance:clo.LoginPage@64bf3bbf]">deleteAppointment</td> 
+<tr bgcolor="cbb882">  <td>19/07/01 10:35:40</td>   <td>-31336</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.createApptSameTime()[pri:5, instance:clo.LoginPage@64bf3bbf]">createApptSameTime</td> 
   <td>main@1241276575</td>   <td></td> </tr>
-<tr bgcolor="cbb882">  <td>19/05/15 13:23:58</td>   <td>36576</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.deleteMessage()[pri:10, instance:clo.LoginPage@64bf3bbf]">deleteMessage</td> 
+<tr bgcolor="cbb882">  <td>19/07/01 10:35:29</td>   <td>-41699</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.createNewAppointment()[pri:4, instance:clo.LoginPage@64bf3bbf]">createNewAppointment</td> 
   <td>main@1241276575</td>   <td></td> </tr>
-<tr bgcolor="cbb882">  <td>19/05/15 13:22:45</td>   <td>-36514</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.loginPositive()[pri:3, instance:clo.LoginPage@64bf3bbf]">loginPositive</td> 
+<tr bgcolor="cbb882">  <td>19/07/01 10:35:57</td>   <td>-13667</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.deleteAppointment()[pri:7, instance:clo.LoginPage@64bf3bbf]">deleteAppointment</td> 
   <td>main@1241276575</td>   <td></td> </tr>
-<tr bgcolor="cbb882">  <td>19/05/15 13:23:50</td>   <td>28447</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.newMessageReply()[pri:9, instance:clo.LoginPage@64bf3bbf]">newMessageReply</td> 
+<tr bgcolor="cbb882">  <td>19/07/01 10:36:09</td>   <td>-2464</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.deleteMessage()[pri:10, instance:clo.LoginPage@64bf3bbf]">deleteMessage</td> 
   <td>main@1241276575</td>   <td></td> </tr>
-<tr bgcolor="cbb882">  <td>19/05/15 13:23:43</td>   <td>21284</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.newMessageSent()[pri:8, instance:clo.LoginPage@64bf3bbf]">newMessageSent</td> 
+<tr bgcolor="cbb882">  <td>19/07/01 10:35:02</td>   <td>-69314</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.loginNegative()[pri:1, instance:clo.LoginPage@64bf3bbf]">loginNegative</td> 
   <td>main@1241276575</td>   <td></td> </tr>
-<tr bgcolor="cbb882">  <td>19/05/15 13:23:29</td>   <td>8114</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.updateAppointment()[pri:6, instance:clo.LoginPage@64bf3bbf]">updateAppointment</td> 
+<tr bgcolor="cbb882">  <td>19/07/01 10:35:15</td>   <td>-56070</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.loginPositive()[pri:3, instance:clo.LoginPage@64bf3bbf]">loginPositive</td> 
   <td>main@1241276575</td>   <td></td> </tr>
-=======
-<tr bgcolor="bd7b6a">  <td>19/05/14 09:51:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.checksReadyToPrint()[pri:11, instance:clo.LoginPage@192b07fd]">checksReadyToPrint</td> 
-  <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/14 09:51:33</td>   <td>4807</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.checksRegister()[pri:12, instance:clo.LoginPage@192b07fd]">checksRegister</td> 
-  <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/14 09:51:02</td>   <td>-26613</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.createApptSameTime()[pri:5, instance:clo.LoginPage@192b07fd]">createApptSameTime</td> 
-  <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/14 09:50:54</td>   <td>-34716</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.createNewAppointment()[pri:4, instance:clo.LoginPage@192b07fd]">createNewAppointment</td> 
-  <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/14 09:51:16</td>   <td>-12290</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.deleteAppointment()[pri:7, instance:clo.LoginPage@192b07fd]">deleteAppointment</td> 
-  <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/14 09:51:26</td>   <td>-2282</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.deleteMessage()[pri:10, instance:clo.LoginPage@192b07fd]">deleteMessage</td> 
-  <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/14 09:50:31</td>   <td>-57464</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.forgotPassword()[pri:2, instance:clo.LoginPage@192b07fd]">forgotPassword</td> 
-  <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/14 09:50:21</td>   <td>-67358</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.loginNegative()[pri:1, instance:clo.LoginPage@192b07fd]">loginNegative</td> 
-  <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/14 09:50:40</td>   <td>-47872</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.loginPositive()[pri:3, instance:clo.LoginPage@192b07fd]">loginPositive</td> 
-  <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/14 09:51:22</td>   <td>-6574</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.newMessageReply()[pri:9, instance:clo.LoginPage@192b07fd]">newMessageReply</td> 
-  <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/14 09:51:17</td>   <td>-11116</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.newMessageSent()[pri:8, instance:clo.LoginPage@192b07fd]">newMessageSent</td> 
-  <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/14 09:51:10</td>   <td>-18468</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.updateAppointment()[pri:6, instance:clo.LoginPage@192b07fd]">updateAppointment</td> 
-  <td>main@846238611</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/05/14 09:51:39</td>   <td>10387</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.voidCheck()[pri:13, instance:clo.LoginPage@192b07fd]">voidCheck</td> 
-  <td>main@846238611</td>   <td></td> </tr>
->>>>>>> b55248094518fde647269a5101baea65bb3377d3
+<tr bgcolor="cbb882">  <td>19/07/01 10:36:04</td>   <td>-6770</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.newMessageReply()[pri:9, instance:clo.LoginPage@64bf3bbf]">newMessageReply</td> 
+  <td>main@1241276575</td>   <td></td> </tr>
+<tr bgcolor="cbb882">  <td>19/07/01 10:35:59</td>   <td>-12370</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.newMessageSent()[pri:8, instance:clo.LoginPage@64bf3bbf]">newMessageSent</td> 
+  <td>main@1241276575</td>   <td></td> </tr>
+<tr bgcolor="cbb882">  <td>19/07/01 10:35:50</td>   <td>-21069</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.updateAppointment()[pri:6, instance:clo.LoginPage@64bf3bbf]">updateAppointment</td> 
+  <td>main@1241276575</td>   <td></td> </tr>
+<tr bgcolor="cbb882">  <td>19/07/01 10:36:23</td>   <td>12163</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.voidCheck()[pri:13, instance:clo.LoginPage@64bf3bbf]">voidCheck</td> 
+  <td>main@1241276575</td>   <td></td> </tr>
 </table>
